--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1642,6 +1642,10 @@ tr.queue-item>td:first-child>a {
     #feedback-slider {
         display: none;
     }
+    
+    .glyphicon-facetime-video {
+        top: 2px;
+    }
 }
 
 @media only screen and (min-device-width:768px) and (max-device-width:1024px) and (orientation:portrait) {
