Stage-log texts of 3+ lines behind More button

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -589,7 +589,7 @@
                                             <!-- ko foreach: historyStatus.stage_log -->
                                             <div class="row">
                                                 <div class="col-sm-2" data-bind="text: glitterTranslate.status[name()]"></div>
-                                                <div class="col-sm-10 history-status-modallink" data-bind="html: actions().join('<br/>')"></div>
+                                                <div class="col-sm-10 history-status-modallink" data-bind="longText: actions"></div>
                                             </div>
                                             <!-- /ko -->
                                         </div>
@@ -679,6 +679,7 @@
             glitterTranslate.updateAvailable = "$T('Glitter-updateAvailable')";
             glitterTranslate.defaultText = "$T('default')";
             glitterTranslate.noneText = "$T('None')";
+            glitterTranslate.moreText = "$T('Glitter-more')";
             
             glitterTranslate.status = [];
             glitterTranslate.status['Completed'] = "$T('post-Completed')";
