--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -930,6 +930,10 @@ tr.queue-item>td:first-child>a {
     font-weight: bold;
 }
 
+.history-status-hidden {
+    display: none;
+}
+
 .history-ratings {
     display: inline-block;
 }
