--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -587,7 +587,7 @@
                                                 <div class="col-sm-2">$T('msg-path')</div>
                                                 <div class="col-sm-10" data-bind="text: historyStatus.storage() == '' ? historyStatus.path : historyStatus.storage"></div>
                                             </div>
-                                            <!-- ko foreach: historyStatus.stage_log -->
+                                            <!-- ko foreach: { data: historyStatus.stage_log, afterRender: addHistoryStatusStuff } -->
                                             <div class="row">
                                                 <div class="col-sm-2" data-bind="text: glitterTranslate.status[name()]"></div>
                                                 <div class="col-sm-10 history-status-modallink" data-bind="longText: actions"></div>
