--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -264,7 +264,7 @@
                                 </form>
                                 <div class="name-options" data-bind="visible: !editingName()">
                                     <a href="#" data-bind="click: editName" class="hover-button"><span class="glyphicon glyphicon-pencil"></span></a>
-                                    <a href="#" data-bind="click: showFiles" class="hover-button"><span class="glyphicon glyphicon-folder-open"></span></a>
+                                    <a href="#" data-bind="click: showFiles" class="hover-button" title="$T('nzoDetails') - $T('srv-password')"><span class="glyphicon glyphicon-folder-open"></span></a>
                                     <small data-bind="text: avg_age"></small>
                                 </div>
                             </td>
