Change buttons in Status-window
The buttons only fitted in English, in all other languages it always
wrapped around to second line.

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -103,7 +103,8 @@ input.form-control,
 select.form-control,
 .main-content .btn-default,
 .modal-body .btn-default,
-.modal-footer .btn-default {
+.modal-footer .btn-default,
+#modal-options .options-function-box .input-group-addon {
     background-color: #555555;
     color: #EBEBEB;
 }
