--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <a href="#" data-bind="click: loadStatusInfo, css: { 'rotate-refresh': !hasStatusInfo() }" title="$T('Glitter-interfaceRefresh')"><span class="glyphicon glyphicon-refresh"></span></a>
+                <a href="#" data-bind="click: loadStatusInfo, css: { 'rotate-refresh': !hasStatusInfo() }" title="$T('Glitter-interfaceRefresh')"><span class="glyphicon glyphicon-repeat"></span></a>
                 <h4 class="modal-title">$T('Glitter-statusInterfaceOptions')</h4>
             </div>
             <div class="modal-body">
@@ -15,58 +15,73 @@
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="options-status">
-                        <!-- ko if: !hasStatusInfo() -->
+                        <!-- ko if: !hasStatusInfo() || !statusInfo.hasOwnProperty('dashboard') -->
                         <h4>$T('Glitter-loading')<span class="loader-dot-one">.</span><span class="loader-dot-two">.</span><span class="loader-dot-three">.</span></h4>
                         <!-- /ko -->
                         <!-- ko if: hasStatusInfo() && statusInfo.hasOwnProperty('dashboard') -->
                         <div class="row">
-                            <div class="col-sm-5">$T('dashboard-localIP4')</div>
-                            <div class="col-sm-7" data-bind="text: !statusInfo.dashboard.localipv4() ? '$T('dashboard-connectionError')' : statusInfo.dashboard.localipv4(), css: { 'options-bad-status' : !statusInfo.dashboard.localipv4() }"></div>
+                            <div class="col-sm-6">$T('dashboard-localIP4')</div>
+                            <div class="col-sm-6" data-bind="text: !statusInfo.dashboard.localipv4() ? '$T('dashboard-connectionError')' : statusInfo.dashboard.localipv4(), css: { 'options-bad-status' : !statusInfo.dashboard.localipv4() }"></div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-5">$T('dashboard-publicIP4')</div>
-                            <div class="col-sm-7" data-bind="text: !statusInfo.dashboard.publicipv4() ? '$T('dashboard-connectionError')' : statusInfo.dashboard.publicipv4(), css: { 'options-bad-status ' : !statusInfo.dashboard.publicipv4() }"></div>
+                            <div class="col-sm-6">$T('dashboard-publicIP4')</div>
+                            <div class="col-sm-6" data-bind="text: !statusInfo.dashboard.publicipv4() ? '$T('dashboard-connectionError')' : statusInfo.dashboard.publicipv4(), css: { 'options-bad-status ' : !statusInfo.dashboard.publicipv4() }"></div>
                         </div>
                         <div class="row" data-bind="visible: (statusInfo.dashboard.ipv6()!=='')">
-                            <div class="col-sm-5">$T('dashboard-IP6')</div>
-                            <div class="col-sm-7" data-bind="text: statusInfo.dashboard.ipv6"></div>
+                            <div class="col-sm-6">$T('dashboard-IP6')</div>
+                            <div class="col-sm-6" data-bind="text: statusInfo.dashboard.ipv6"></div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-5">$T('dashboard-NameserverDNS')</div>
-                            <div class="col-sm-7" data-bind="text: !statusInfo.dashboard.dnslookup() ? '$T('dashboard-connectionError')' : statusInfo.dashboard.dnslookup(), css: { 'options-bad-status' : (statusInfo.dashboard.dnslookup() != 'OK') }"></div>
+                            <div class="col-sm-6">$T('dashboard-NameserverDNS')</div>
+                            <div class="col-sm-6" data-bind="text: !statusInfo.dashboard.dnslookup() ? '$T('dashboard-connectionError')' : statusInfo.dashboard.dnslookup(), css: { 'options-bad-status' : (statusInfo.dashboard.dnslookup() != 'OK') }"></div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-5">$T('dashboard-downloadDirSpeed')</div>
-                            <div class="col-sm-7">
+                            <div class="col-sm-6">$T('dashboard-downloadDirSpeed')</div>
+                            <div class="col-sm-6">
                                 <span data-bind="text: (statusInfo.dashboard.downloaddirspeed() > 0 ? statusInfo.dashboard.downloaddirspeed() : '0'), css: { 'options-bad-status' : statusInfo.dashboard.downloaddirspeedbad() }"></span> MB/s
-                                <a href="#" data-bind="click: testDiskSpeed" data-tooltip="true" data-placement="right" title="$T('dashboard-repeatTest')"><span class="glyphicon glyphicon-refresh"></span></a>
+                                <a href="#" data-bind="click: testDiskSpeed" data-tooltip="true" data-placement="right" title="$T('dashboard-repeatTest')"><span class="glyphicon glyphicon-repeat"></span></a>
                                 <small>(<span data-bind="truncatedText: statusInfo.dashboard.downloaddir, length: 25"></span>)</small>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-5">$T('dashboard-completeDirSpeed')</div>
-                            <div class="col-sm-7">
+                            <div class="col-sm-6">$T('dashboard-completeDirSpeed')</div>
+                            <div class="col-sm-6">
                                 <span data-bind="text: (statusInfo.dashboard.completedirspeed() > 0 ? statusInfo.dashboard.completedirspeed() : '0'), css: { 'options-bad-status' : statusInfo.dashboard.completedirspeedbad() }"></span> MB/s
-                                <a href="#" data-bind="click: testDiskSpeed" data-tooltip="true" data-placement="right" title="$T('dashboard-repeatTest')"><span class="glyphicon glyphicon-refresh"></span></a>
+                                <a href="#" data-bind="click: testDiskSpeed" data-tooltip="true" data-placement="right" title="$T('dashboard-repeatTest')"><span class="glyphicon glyphicon-repeat"></span></a>
                                 <small>(<span data-bind="truncatedText: statusInfo.dashboard.completedir, length: 25"></span>)</small>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-5">$T('cache')</div>
-                            <div class="col-sm-7">
+                            <div class="col-sm-6">$T('cache')</div>
+                            <div class="col-sm-6">
                                 <span data-bind="text: statusInfo.status.cache.cache_size"></span> (<span data-bind="text: statusInfo.status.cache.cache_current"></span> $T('Glitter-articles'))
                             </div>
                         </div>
-                        <div class="clearfix"></div>
-                        <div class="options-function-box">
-                            <a href="#" data-bind="click: forceDisconnect" class="btn btn-default ">$T('link-forceDisc')</a>
-                            <a href="#" data-bind="click: repairQueue" data-tooltip="true" data-placement="top" title="$T('explain-Repair').replace('<br>',' ').replace('<br />',' ')" class="btn btn-default">$T('Glitter-repairQueue')</a>
-                            <a href="status/showlog?session=$session" target="_blank" class="btn btn-default">$T('link-showLog')</a>
-                            <select class="form-control" data-bind="value: statusInfo.status.loglevel">
-                                <option value="0">$T('log-errWarn')</option>
-                                <option value="1">$T('log-info')</option>
-                                <option value="2">$T('log-debug')</option>
-                            </select>
+                        <hr />   
+                        <div class="row options-function-box">
+                            <div class="col-sm-6"> 
+                                <a href="#" data-bind="click: forceDisconnect" class="btn btn-default "><span class="glyphicon glyphicon-minus-sign"></span> $T('link-forceDisc')</a>
+                            </div>
+                            <div class="col-sm-6">
+                                <a href="#" data-bind="click: repairQueue" data-tooltip="true" data-placement="top" title="$T('explain-Repair').replace('<br>',' ').replace('<br />',' ')" class="btn btn-default">
+                                    <span class="glyphicon glyphicon-wrench"></span> $T('Glitter-repairQueue')
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row options-function-box">
+                            <div class="col-sm-6"> 
+                                <a href="status/showlog?session=$session" target="_blank" class="btn btn-default"><span class="glyphicon glyphicon-file"></span> $T('link-showLog')</a>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="input-group" data-tooltip="true" data-placement="top" title="$T('logging')">
+                                    <span class="input-group-addon"><span class="glyphicon glyphicon-comment"></span></span>
+                                    <select class="form-control" data-bind="value: statusInfo.status.loglevel">
+                                        <option value="0">$T('log-errWarn')</option>
+                                        <option value="1">$T('log-info')</option>
+                                        <option value="2">$T('log-debug')</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                         <!-- /ko -->
                     </div>
@@ -85,23 +100,23 @@
                             <div class="options-server-box">
                                 <a href="#" data-bind="visible: serverblocked(), click: function() { \$parent.unblockServer(servername()) }" class="btn btn-default">$T('Glitter-unblockServer')</a>
                                 <div class="row">
-                                    <div class="col-sm-5">$T('swtag-server')</div>
-                                    <div class="col-sm-7">
+                                    <div class="col-sm-6">$T('swtag-server')</div>
+                                    <div class="col-sm-6">
                                         <span data-bind="text: servername"></span><br />
                                         <span data-bind="visible: serverblocked(), text: serverblocked" class="label label-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-5">$T('status')</div>
-                                    <div class="col-sm-7" data-bind="text: serverstatus"></div>
+                                    <div class="col-sm-6">$T('status')</div>
+                                    <div class="col-sm-6" data-bind="text: serverstatus"></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-5">$T('priority')</div>
-                                    <div class="col-sm-7" data-bind="text: serverpriority"></div>
+                                    <div class="col-sm-6">$T('priority')</div>
+                                    <div class="col-sm-6" data-bind="text: serverpriority"></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-5"># $T('connections')</div>
-                                    <div class="col-sm-7" data-bind="text: serveractiveconn"></div>
+                                    <div class="col-sm-6"># $T('connections')</div>
+                                    <div class="col-sm-6" data-bind="text: serveractiveconn"></div>
                                 </div>
                                 
                                 <!-- ko if: serverconnections().length > 0 -->
@@ -169,7 +184,7 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-5 control-label">$T('Glitter-interfaceRefresh')</label>
+                                <label class="col-sm-6 control-label">$T('Glitter-interfaceRefresh')</label>
                                 <div class="col-sm-4">
                                     <select id="refreshRate-option" class="form-control" data-bind="value: refreshRate">
                                         <option value="1">1 $T('second')</option>
@@ -187,7 +202,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-5 control-label">$T('Glitter-queueItemLimit')</label>
+                                <label class="col-sm-6 control-label">$T('Glitter-queueItemLimit')</label>
                                 <div class="col-sm-4">
                                     <select name="queue-pagination-limit" class="form-control" data-bind="value: queue.paginationLimit">
                                         <option value="5">5 / $T('Glitter-page')</option>
@@ -202,7 +217,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-5 control-label">$T('Glitter-historyItemLimit')</label>
+                                <label class="col-sm-6 control-label">$T('Glitter-historyItemLimit')</label>
                                 <div class="col-sm-4">
                                     <select name="history-pagination-limit" class="form-control" data-bind="value: history.paginationLimit">
                                         <option value="5">5 / $T('Glitter-page')</option>
@@ -218,7 +233,7 @@
                             </div>
                             <div class="options-switch"></div>
                             <div class="form-group">
-                                <label class="col-sm-5 control-label">$T('Glitter-dateFormat')</label>
+                                <label class="col-sm-6 control-label">$T('Glitter-dateFormat')</label>
                                 <div class="col-sm-4">
                                     <select name="general-date-format" class="form-control" data-bind="value: dateFormat">
                                         <option value="DD/MM/YYYY HH:mm"></option>
@@ -236,7 +251,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-5 control-label">
+                                <label class="col-sm-6 control-label">
                                     $T('Glitter-showExtraColumn')<br />
                                     <span class="label label-warning">&gt; 1200 pixels</span>
                                 </label>
@@ -252,7 +267,7 @@
                                 </div>
                             </div>
                             <div class="form-group form-checkbox">
-                                <label class="col-sm-5 control-label">
+                                <label class="col-sm-6 control-label">
                                     $T("Glitter-confirmDeleteQueue")
                                 </label>
                                 <div class="col-sm-4">
@@ -260,7 +275,7 @@
                                 </div>
                             </div>
                             <div class="form-group form-checkbox">
-                                <label class="col-sm-5 control-label">
+                                <label class="col-sm-6 control-label">
                                     $T("Glitter-confirmDeleteHistory")
                                 </label>
                                 <div class="col-sm-4">
