--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -546,7 +546,7 @@
                                                     <input type="text" class="form-control ratings-report-hidden" name="ratings-report-comment" />
                                                 </label>
                                                 <br />
-                                                <button type="submit" class="btn btn-default">$T('send') <span class="glyphicon glyphicon-ok"></span></button>
+                                                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> $T('send')</button>
                                             </form>
                                         </li>
                                     </ul>
