--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -1,3 +1,33 @@
+<!-- Filedrop and Restarting overlay -->
+<div class="main-filedrop modal-backdrop fade in">
+    <span class="glyphicon glyphicon-plus-sign"></span>
+</div>
+<div class="main-restarting modal-backdrop fade in" data-bind="visible: isRestarting" style="display: none;">
+    <div>
+        <strong><span class="glyphicon glyphicon-retweet"></span> $T('Glitter-lostConnection')</strong><br />
+        <small>$T('Glitter-afterRestart')</small>
+    </div>
+</div>
+
+<!-- Feedback -->
+<div id="feedback-slider" data-bind="visible: glitterIsBeta && !localStorageGetItem('showFeedback')" style="display: none;">
+    <h4>Feedback <a href="#" onclick="localStorageSetItem('showFeedback', 'No'); \$(this).parent().parent().hide()">&times;</a></h4>
+    <div id="feedback-slider-inner">
+        <p><strong>If anything is not working as expected, or could be improved, let us know!</strong></p>
+        <p><strong>If you encounter an error, please include the log file (click on <span class="glyphicon glyphicon-wrench"></span> ) when contacting us.</strong></p>
+        <h4>General</h4>
+        <span class="glyphicon glyphicon-home"></span> <a href="http://forums.sabnzbd.org/" target="_blank">SABnzbd Forum</a><br />
+        <span class="glyphicon glyphicon-plane"></span> <a href="https://github.com/sabnzbd/sabnzbd/" target="_blank">SABnzbd on Github</a><br />
+        <span class="glyphicon glyphicon-globe"></span> <a href="https://translations.launchpad.net/sabnzbd" target="_blank">Translations of SABnzbd</a><br />
+        <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:bugs@sabnzbd.org?body=Version:%20$version%20Skin:%20Glitter">Email bugs@sabnzbd.org</a>
+
+        <h4>Interface (Glitter)</h4>
+        <span class="glyphicon glyphicon-home"></span> <a href="http://forums.sabnzbd.org/viewtopic.php?f=5&amp;t=18880" target="_blank">Glitter at SABnzbd Forum</a><br />
+        <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:safihre@sabnzbd.org?body=Version:%20$version">Email safihre@sabnzbd.org</a>
+    </div>
+</div>
+
+<!-- Modals -->
 <div id="modal-options" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
