Display Filejoin stage

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -91,7 +91,7 @@
             glitterTranslate.status['Checking'] = "$T('post-Checking')";
             glitterTranslate.status['Download'] = "$T('stage-download')";
             glitterTranslate.status['Repair'] = "$T('stage-repair')";
-            glitterTranslate.status['Join files'] = "$T('stage-filejoin')";
+            glitterTranslate.status['Filejoin'] = "$T('stage-filejoin')";
             glitterTranslate.status['Unpack'] = "$T('stage-unpack')";
             glitterTranslate.status['Script'] = "$T('stage-script')";
             glitterTranslate.status['Source'] = "$T('stage-source')";
