Missing INCOMPLETE and UNWANTED for filter

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -63,6 +63,8 @@
             glitterTranslate.encrypted = "$T('Glitter-encrypted')";
             glitterTranslate.duplicate = "$T('Glitter-duplicate')";
             glitterTranslate.tooLarge = "$T('Glitter-tooLarge')";
+            glitterTranslate.unwanted = "$T('Glitter-unwanted')";
+            glitterTranslate.incomplete = "$T('Glitter-incomplete')";
             glitterTranslate.filtered = "$T('Glitter-filtered')";
             glitterTranslate.waitSec = "$T('Glitter-waitSec')";
             glitterTranslate.checking = "$T('post-Checking')";
