--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -186,6 +186,14 @@
                         <span class="desc">$T('explain-par2_multicore')</span>
                     </div>
                     <div class="field-pair">
+                    <!--#if $nt#-->
+                    <div class="field-pair">
+                        <label class="config" for="multipar">Enable MultiPar</label>
+                        <input type="checkbox" name="multipar" id="multipar" value="1" <!--#if int($multipar) > 0 then 'checked="checked"' else ""#--> />
+                        <span class="desc">$T('explain-par2_multicore')</span>
+                    </div>
+                    <!--#end if#-->
+                    <div class="field-pair">
                         <label class="config" for="par_option">$T('opt-par_option')</label>
                         <input type="text" name="par_option" id="par_option" value="$par_option" />
                         <span class="desc">$T('explain-par_option')</span>
