#432 Change filename to name in Add NZB

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -362,7 +362,7 @@
                 <div class="row form-horizontal">
                     <label class="col-sm-6 control-label">$T('Glitter-addnzbFilename')</label>
                     <div class="col-sm-6">
-                        <input type="text" name="nzbname" id="nzbname" placeholder="$T('nzo-filename')" class="form-control" />
+                        <input type="text" name="nzbname" id="nzbname" placeholder="$T('name')" class="form-control" />
                     </div>
                 </div>
                 <hr />
