#408 Extra space next to Folder icon

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -801,6 +801,10 @@ input[type="checkbox"] {
     display: none;
 }
 
+#navbar .glyphicon-folder-open {
+    margin-right: 2px;
+}
+
 .rss-icon-svg {
     display: inline-block;
     margin-top: 1px;
